infra/kustomize/core/base/istio/overlays/prod/namespace.yml
#################################
# Namespace (istio-system)
#################################
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
