infra/kustomize/core/base/istio/overlays/prod/ingress-gateway-patch.yml
################################
# Ingress (Istio)
#################################
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: dummy
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - www.lratg.com
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - www.lratg.com
